--- a/view/cadastro.html
+++ b/view/cadastro.html
@@ -59,6 +59,6 @@
     </footer>
 
     <!-- lógica de cadastro -->
-                        <script src="../control/logica-usuario.js"></script>
+                        <script src="../controller/logica-usuario.js"></script>
 </body>
 </html>
