--- a/view/favoritos.html
+++ b/view/favoritos.html
@@ -99,8 +99,8 @@
     </footer>
 
     <script src="../model/funcoes.js"></script>
-    <script src="../control/logica-usuario.js"></script>
-    <script src="../control/logica-botoes-produtos.js"></script>
-    <script src="../control/produto.js"></script>
+    <script src="../controller/logica-usuario.js"></script>
+    <script src="../controller/logica-botoes-produtos.js"></script>
+    <script src="../controller/produto.js"></script>
 </body>
 </html>
