--- a/view/quarto.html
+++ b/view/quarto.html
@@ -84,7 +84,7 @@
   </div>
  
 </aside>
- <script src="../control/filtro-todos.js" defer></script>
+ <script src="../controller/filtro-todos.js" defer></script>
 <div id="resultado">
  </div>
     <footer id="rodape">
@@ -92,7 +92,7 @@
         <a href="sobreNos.html" class="texto-rodape">Sobre nós</a>
         <h2 class="texto-rodape">MoveLar - Móveis e acessórios para todos os ambientes. Conforto, praticidade e estilo para sua casa e escritório.</h2>
     </footer>
-    <script src="../control/logica-botoes-produtos.js"></script> 
-    <script src="../control/logica-usuario.js"></script> 
+    <script src="../controller/logica-botoes-produtos.js"></script> 
+    <script src="../controller/logica-usuario.js"></script> 
 </body>
 </html>
