--- a/view/sala.html
+++ b/view/sala.html
@@ -87,7 +87,7 @@
         <div id="grid" class="grid"></div>
     </div>
      
- <script src="../control/filtro-todos.js" defer></script>
+ <script src="../controller/filtro-todos.js" defer></script>
  
  <div id="resultado">
  </div>
@@ -98,8 +98,8 @@
         <h2 class="texto-rodape">MoveLar - Móveis e acessórios para todos os ambientes. Conforto, praticidade e estilo para sua casa e escritório.</h2>
     </footer>
 
-  <script src="../control/logica-botoes-produtos.js"></script> 
-  <script src="../control/logica-usuario.js"></script> 
+  <script src="../controller/logica-botoes-produtos.js"></script> 
+  <script src="../controller/logica-usuario.js"></script> 
 
 </body>
 </html>
