--- a/view/carrinho.html
+++ b/view/carrinho.html
@@ -5,8 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Carrinho</title>
   <link rel="stylesheet" href= "styles/estilo.css">
-  <script src="../controller/logica-carrinho.js" defer></script>
-  <script src="../controller/logica-usuario.js" defer></script> 
+  <script src="../control/logica-carrinho.js" defer></script>
+  <script src="../control/logica-usuario.js" defer></script> 
 </head>
 <body>
     
