--- a/view/produto.html
+++ b/view/produto.html
@@ -37,9 +37,9 @@
         <h2 class="texto-rodape">MoveLar - Móveis e acessórios para todos os ambientes. Conforto, praticidade e estilo para sua casa e escritório.</h2>
     </footer>
 
-    <script src="../controller/produto.js"></script>
-    <script src="../controller/logica-botoes-produtos.js"></script>
-    <script src="../controller/logica-usuario.js"></script>
+    <script src="../control/produto.js"></script>
+    <script src="../control/logica-botoes-produtos.js"></script>
+    <script src="../control/logica-usuario.js"></script>
     <script src="../model/funcoes.js"></script>
 
 </body>
