--- a/view/index.html
+++ b/view/index.html
@@ -27,11 +27,11 @@
        <br/><br/>
 
     <section id="cate">  
-        <a href="sala.html"> <img id="salaGenerica" class="categoria" src="IMG/label_sala.png" alt="sala"/></a>
-        <a href="quarto.html"> <img id="quartoGenerico" class="categoria" src="IMG/label_quarto.png" alt="quarto"/></a>
-        <a href="jardim.html"> <img id="jardimGenerico"  class="categoria" src="IMG/label_jardim.png" alt="jardim"/> </a>
-        <a href="escritorio.html">  <img id="escritorioGen" class="categoria" src="IMG/label_escritorio.png" alt="escritoriio"/> </a>
-        <a href="todosProdutos.html">  <img id="casaGen" class="categoria" src="IMG/casaCanva.png" alt="verTudo"/> </a>
+        <a href="sala.html"> <img id="salaGenerica" class="categoria" src="IMG/sala.png" alt="sala"/></a>
+        <a href="quarto.html"> <img id="quartoGenerico" class="categoria" src="IMG/quarto.png" alt="quarto"/></a>
+        <a href="jardim.html"> <img id="jardimGenerico"  class="categoria" src="IMG/jardim.png" alt="jardim"/> </a>
+        <a href="escritorio.html">  <img id="escritorioGen" class="categoria" src="IMG/escritorio.png" alt="escritoriio"/> </a>
+        <a href="todosProdutos.html">  <img id="casaGen" class="categoria" src="IMG/ver_tudo.png" alt="verTudo"/> </a>
     </section>
     </div>
 
