--- a/view/styles/estilo.css
+++ b/view/styles/estilo.css
@@ -105,7 +105,7 @@ img.categoria {
 }
 
 .categoria:hover {
- filter: brightness(1.3);
+ filter: brightness(1.07);
 }
 
 /*Sobre Nós*/
@@ -1014,6 +1014,11 @@ h1.fav {
     width: 80%;
     height:70px;
     font-size: 20px;
+  }
+
+  img.categoria{
+    width: 438px;
+    height: 282px;
   }
 }
 
